# GM-SE

./: README.md  build_ieee33_with_pp.py  measurements_and_wls.py  profiles_from_simbench.py  pyproject.toml  quick_check_dataset.py  run_experiments.sh  run_wls_ieee33_from_simbench.py
analysis/: sensitivity_shap.py
checkpoints/: refine_wls_best_W24.pt
configs/: defaults.yaml  pgr.yaml
data/windows_ieee33/: W24_test.npz  W24_train.npz  (+4 more)
data_pipeline/: make_windows.py
diff/: fix.diff
docs/: EXPERIMENT_PLAN.md
eval/: eval_refine.py  eval_robustness.py  eval_wls_baseline.py  evall_physics_baseline.py
gm_se.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: baselines.py  gnn_blocks.py  gru_baseline.py  pgr.py  refine_seq.py  tagru.py  temporal_attention.py
physics/: ac_model.py  feasibility.py  losses.py  torch_ac_model.py
results/: robustness_summary_W24.csv  ta_gru_sweep_W24.csv  ta_gru_sweep_W24.json  ta_gru_sweep_W96.csv  ta_gru_sweep_W96.json
scripts/: aggregate_results.py  grid_search.py  run_wandb_sweep.sh  wandb_fetch_best.py
sweeps/: gru_baseline_sweep.yaml  pgr_sweep.yaml  refine_seq_sweep.yaml  tagru_sup_sweep.yaml  tagru_weakly_sweep.yaml
temporal_graph/: build_time_graph.py
tools/: check_radial.py  metrics.py  plot_ieee33.py  sweep_tagru.py  train_sweep_and_compare.py  validate_windows.py
train/: dataset.py  train_baselines.py  train_pgr_hybrid.py  train_refine_baseline.py  train_tagru_final.py  train_tagru_hybrid.py  train_tagru_residual_r.py  train_tagru_supervised.py  train_tagru_weakly.py
wandb/: latest-run
(+1307 files in other folders)
